ButtonGroup - fixes Safari spacing issue between buttons

--- a/src/components/button-group/button-group.scss
+++ b/src/components/button-group/button-group.scss
@@ -14,6 +14,7 @@
     cursor: pointer;
     font-size: inherit;
     font-weight: $font-semibold;
+    margin: 0;
     min-height: auto;
     padding: rem(6 16);
     position: relative;
